--- a/.github/workflows/ci-build.yaml
+++ b/.github/workflows/ci-build.yaml
@@ -1,4 +1,5 @@
 name: CI Build
+
 on:
   push:
     branches:
@@ -18,6 +19,7 @@ jobs:
         ports:
           - 5432:5432
         env:
+          POSTGRES_USER: postgres
           POSTGRES_PASSWORD: pgs3cr3t
           POSTGRES_DB: testdb
         options: >-
@@ -25,3 +27,32 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip wheel
+          pip install -r requirements.txt    
+
+      - name: Wait for PostgreSQL to be ready
+        run: |
+          echo "Waiting for PostgreSQL..."
+          for i in {1..10}; do
+            pg_isready -h postgres -p 5432 && break
+            echo "PostgreSQL not ready, retrying..."
+            sleep 5
+          done
+
+      - name: Run Database Migrations
+        env:
+          DATABASE_URL: postgresql://postgres:pgs3cr3t@postgres/testdb
+        run: |
+          python manage.py db upgrade || echo "Skipping migrations if not applicable"
+
+      - name: Run Tests
+        env:
+          DATABASE_URL: postgresql://postgres:pgs3cr3t@postgres/testdb
+        run: pytest tests/
