--- a/.github/workflows/ci-build.yaml
+++ b/.github/workflows/ci-build.yaml
@@ -56,3 +56,8 @@ jobs:
         env:
           DATABASE_URL: postgresql://postgres:pgs3cr3t@postgres/testdb
         run: pytest tests/
+        
+      - name: Lint with flake8
+        run: |
+          flake8 service --count --select=E9,F63,F7,F82 --show-source --statistics
+          flake8 service --count --max-complexity=10 --max-line-length=127 --statistics
