--- a/.github/workflows/ci-build.yaml
+++ b/.github/workflows/ci-build.yaml
@@ -1,5 +1,4 @@
 name: CI Build
-
 on:
   push:
     branches:
@@ -19,7 +18,6 @@ jobs:
         ports:
           - 5432:5432
         env:
-          POSTGRES_USER: postgres
           POSTGRES_PASSWORD: pgs3cr3t
           POSTGRES_DB: testdb
         options: >-
@@ -29,35 +27,20 @@ jobs:
           --health-retries 5
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v2
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip wheel
-          pip install -r requirements.txt    
+          pip install -r requirements.txt
 
-      - name: Wait for PostgreSQL to be ready
-        run: |
-          echo "Waiting for PostgreSQL..."
-          for i in {1..10}; do
-            pg_isready -h postgres -p 5432 && break
-            echo "PostgreSQL not ready, retrying..."
-            sleep 5
-          done
-
-      - name: Run Database Migrations
-        env:
-          DATABASE_URL: postgresql://postgres:pgs3cr3t@postgres/testdb
-        run: |
-          python manage.py db upgrade || echo "Skipping migrations if not applicable"
-
-      - name: Run Tests
-        env:
-          DATABASE_URL: postgresql://postgres:pgs3cr3t@postgres/testdb
-        run: pytest tests/
-        
       - name: Lint with flake8
         run: |
           flake8 service --count --select=E9,F63,F7,F82 --show-source --statistics
           flake8 service --count --max-complexity=10 --max-line-length=127 --statistics
+
+      - name: Run unit tests with nose
+        run: nosetests
+        env:
+          DATABASE_URI: "postgresql://postgres:pgs3cr3t@postgres:5432/testdb"
